--- a/Tex/src/evaluation.tex
+++ b/Tex/src/evaluation.tex
@@ -48,7 +48,7 @@ treap (\autoTreap), to the following custom tailored approaches:
 \begin{itemize}
 \item \danaTree - The locked-based 
 				unbalanced tree of Drachsler at al.\cite{DrachslerVY2014}
-				\footnote{Implementation provided by the authors}. 
+				\footnote{Implementation provided by the authors.}. 
 \item \danaAVL - The locked-based relaxed balanced AVL tree of 
 				Drachsler et al.\cite{DrachslerVY2014}
 				\footnote{Implementation available at \\
