--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -2,6 +2,7 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{claim}[theorem]{Claim}
+\newtheorem{observation}[theorem]{Observation}
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}[theorem]{Corollary}
 
