=proof minor edits

--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -120,7 +120,8 @@ keyword1, keyword2
 \input{evaluation}
 \input{related}
 \input{discussion}
-%\appendix
+\appendix
+\input{proof-appendix}
 %\section{Appendix Title}
 
 %This is the text of the appendix, if you need one.
