--- a/Tex/src/proof2.tex
+++ b/Tex/src/proof2.tex
@@ -30,12 +30,15 @@ We call the resulting execution $\pi'$.
 We next iteratively perturb $\pi'$ to construct an equivalent execution of the locking protocol.
 We order the operations in \op\ according to the order in which the first steps of their respective (successful) read set validation phases occur in $\pi'$.
 Denote the sequence of these first validations steps $e_1, e_2, \ldots, e_k$, and the respective operations
-$op_1, op_2, \ldots, op_k$ in this order. Let $\pi_0 = \pi'$. 
+$op_1, op_2, \ldots, op_k$ in this order. Let $\pi_0 = \pi'$.
 In each iteration $i \geq 1$, we construct $\pi_i$ by replacing the execution of $op_i$
 in $\pi_{i-1}$ with an execution of $op_i$ that follows the locking protocol. To do this, we first move all steps of $op_i$ that precede 
 its first validation step, $e_i$, to occur immediately before $e_i$ (we know that the read steps return the same values, since validation 
-succeeds). We then add steps that lock all of them immediately before these moved read steps. Finally, we add unlock steps immediately
-before $e_i$ for objects that are in the read set but not in the lock set during $e_i$, and remove the tryLock steps for remaining objects. 
+succeeds). We then add steps that lock these objects before their read steps (and unlock
+them) as dictated by the locking protocol.
+%We then add steps that lock all of them immediately before these moved read
+% steps. Finally, we add unlock steps immediately before $e_i$ for objects that are in the read set but not in the lock set during $e_i$, 
+Finally we remove the tryLock and validation steps by $op_i$. 
 
 Our ability to lock each object in $op_i$'s read set follows from the following observation:
 \begin{observation}
@@ -61,163 +64,3 @@ source of spurious blocking that is not present in the original locking protocol
 
 
 
-\subsection{Everything below should move to the appendix}
-
-%
-Denote by $e_1, e_2, \ldots, e_i, \ldots$ the sequence of the first steps of the
-read set validation in the execution of successful validation phases, by their
-order in $\pi$, where $e_i$ is a step of the operation $op_{e_i}$ executed by process $p_{e_i}$.
-%Two executions are \emph{equivalent} if every process in their associated
-%histories invokes the same operations in the same order and gets the
-%same results for each operation. \eshcar{can move this def to the model section}
-%
-
-Two executions are \emph{indistinguishable} to a set of operations if each
-operation in the set executes the same steps on primitive shared objects, and
-receives the same value from those primitives, in both executions.
-
-\eshcar{define invisible step?} 
-
-For every operation $op_{e_i}$, consider the partition of $\pi$ to
-the following intervals $\pi=\alpha_i\beta_i\gamma_i$, such that
-$\alpha_i$ includes the execution interval of $op_{e_i}$'s read-only phase
-(denote $op_{e_i}$'s read set $rs_{e_i}$); $\beta_i=\beta_{i_1}\beta_{i_2}$, is the
-minimal execution interval of $op_{e_i}$'s successful validation phase; in
-$\beta_{i_1}$, $op_{e_i}$ acquires 
-locks on its lock set, denoted $ls_{e_i}$; 
-$e_i$ is the first step of $\beta_{i_2}$, namely the read set validation
-interval.
-
-The next claim follows from the fact that the validation phase of $op_{e_i}$
-in $\beta_i$ is successful, and includes locks and versions
-re-validation: \eshcar{need to prove these? or are these clear from the
-alg description?}
-
-\begin{claim}
-\label{claim:locks}
-No operation in $\op\setminus\{op_{e_i}\}$ holds or acquires a lock in
-$\alpha_i\beta_{i_1}$ on an object $obj$ in $rs_{e_i}$ after $op_{e_i}$ last
-read $obj$ in $\alpha_i$.
-\end{claim}
-
-Let $\pi'$ be a projection of $\pi$ excluding all steps accessing versions and
-all prefixes of the operations preceding their (single) successful read-only
-phase. These prefixes include read steps as well as try-lock and unlock
-steps. Removing read steps is invisible to other processes. Since we remove all
-try-lock steps that have failed to acquire locks, and some successful try-locks,
-all remaining try-lock and lock steps are also successful in $\pi'$. 
-Therefore, $\pi'$ is a valid execution such that 
-all operations in \op\ return the same values as in $\pi$:
-\begin{claim}
-\label{claim:pipitag}
-$\pi$ and $\pi'$ are equivalent.
-\end{claim}
-Note that by construction, in $\pi'$ every step accessing a lock object, either
-for locking it or for validating it is not locked, finds the object not locked.
-
-Our main lemma constructs the execution of a code with full instrumentation of
-the locking protocol. The core idea is to replace the optimistic read-only phase
-and validation phase of all operation with a solo execution of the read phase
-instrumented with the locking protocol taking place at the point where the try
-lock phase is completed.
-\begin{lemma}
-\label{lemma:pitagtag}
-Given a locking protocol, there is an execution $\pi''$ of the code
-instrumented with the locking protocol that is equivalent to $\pi'$.
-\end{lemma}
-\begin{proof}
-We start with the execution $\pi_1^{'}=\pi'$.
-%$\pi_1^{'}=\alpha_1^{'}\beta_{1}^{'}\gamma_1^{'}$, where $\alpha_1^{'}$
-%($\beta_1^{'}$ and $\gamma_1^{'}$) is the projection of $\alpha_1$
-%($\beta_1$ and $\gamma_1$, respectively) excluding the steps that were removed
-%from $\pi$. 
-For every $i \geq 1$, we show how to perturb $\pi_i^{'}$ to
-obtain an execution $\pi_{i}^{''}$ in which
-\begin{enumerate}
-  \item \label{cond:lp} The operations $op_{e_1},\ldots,op_{e_i}$ follow the
-  full locking protocol, while the rest of the operations
-  $\opt_{i+1}=\op\setminus\{op_{e_1},\ldots,op_{e_i}\}$ do not follow the
-  full locking protocol.
-  \item \label{cond:locks} For each $j\geq i+1$, Let
-  $\beta_{j}^{'}=\beta_{j_1}^{'}\beta_{j_2}^{'}$ be the minimal interval
-  containing $op_{e_j}$'s validation phase, where $\beta_{j_1}^{'}$ is the
-  minimal interval containing $op_{e_j}$'s try-lock phase in $\pi_{i}^{'}$.
-  Denote the configuration between $\beta_{j_1}^{'}$ and $\beta_{j_2}^{'}$
-  $C_{e_j}$.
-  No operation in $\op\setminus\{op_{e_{j}}\}$ holds a lock in $C_{e_j}$
-  on an object $obj$ in $rs_{e_{j}}$, and no operation in
-  $\op\setminus\{op_{e_{j}}\}$ writes to an object $obj$ in $rs_{e_{j}}$ after
-  $op_{e_j}$ last read $obj$ before $C_{e_j}$.
-  %after $op_{e_{j}}$ last read $obj$ before $\beta_j^{'}$
-  \item \label{cond:equiv} $\pi^{'}$ and $\pi_{i+1}^{'}$ are equivalent.
-\end{enumerate}
-
-For $\opt_{i+1}=\emptyset$, we get an execution where all operations follow the
-locking protocol, and by Condition~\ref{cond:equiv} $\pi''=\pi_{i+1}^{'}$ is
-equivalent to $\pi^{'}$ and we are done.
-
-The proof is by induction on $i$. For the base case we consider
-the execution $\pi^{'}=\pi_1^{'}$. Condition~\ref{cond:lp} holds since none of
-the operations in this execution follow the full locking protocol.
-Condition~\ref{cond:locks} holds by
-Claim~\ref{claim:locks}, since in $\pi'$ we only remove read and lock steps, and
-since accesses to objects (other than versions) are similar in $\pi$ and $\pi'$.
-Condition~\ref{cond:equiv} vacuously holds since $\pi'$ and $\pi_1^{'}$ are the
-same execution.
-
-For the induction step, assume $\opt_i \neq \emptyset$ and
-the execution
-$\pi_i^{'}=\alpha_i^{'}\beta_{i_1}^{'}\beta_{i_2}^{'}\gamma_i^{'}$ satisfies
-the above conditions.
-We replace $\pi_i^{'}$ with
-$\pi_i^{''}=\alpha_i^{''}\beta_{i_1}^{''}\delta_i\beta_{i_2}^{''}\gamma_i^{'}$,
-such that $\alpha_i^{''}$, $\beta_{i_1}^{''}$, and $\beta_{i_2}^{''}$ are the
-projection of $\alpha_i^{'}$, $\beta_{i_1}^{'}$ and $\beta_{i_2}^{'}$, excluding
-the steps by $op_{e_i}$, while $\delta_i$ is a $p_{e_i}$-only execution
-interval in which $p_{e_i}$ follows the locking protocol while
-reading $rs_{e_i}$; after $\delta_{i}$, $p_{e_i}$ holds the locks on all
-objects in $ls_{e_i}$, and holds no lock on other objects. 
-In other words, we replace the optimistic read-only phase and validation phase
-of $op_{e_i}$ with an execution of a read phase instrumented with the
-locking protocol, taking place at $C_{e_j}$.
-%at the point just before the read set validation starts.
-
-By Condition~\ref{cond:locks} of the induction hypothesis no operation holds 
-locks on objects in the read set of $op_{e_i}$ in $C_{e_i}$, therefore,
-$p_{e_i}$ can acquire the locks on these objects while executing $\delta_{i}$.
-In addition, by Condition~\ref{cond:locks} of the induction hypothesis no operation
-writes to an object $obj$ in $rs_{e_{i}}$ after
-$op_{e_i}$ last read $obj$ before $C_{e_i}$, hence $op_{e_i}$ reads the same
-values in its read set in $\pi_i^{'}$ and $\pi_i^{''}$. Since after $\delta_{i}$
-$op_{e_i}$ holds the locks on all objects in $ls_{e_i}$, it can continue with
-the execution of the locking protocol.
-
-In $\alpha_i^{''}\beta_{i_1}^{''}$ we only removed read steps and try-lock steps
-by $op_{e_i}$ that are invisible to all other operations. Therefore, the executions
-$\alpha_i^{'}\beta_{i_1}^{'}$, ending with configuration $C'$, and
-$\alpha_i^{''}\beta_{i_1}^{''}\delta_i$, ending with configuration $C''$, are
-indistinguishable to all operations in $\op\setminus\{op_{e_{i}}\}$. 
-In addition, in $\beta_{i_2}^{''}$ we only removed read steps, and since the
-values of all shared objects and locks are the same in $C'$ and $C''$, the
-executions $\alpha_i^{'}\beta_{i_1}^{'}\beta_{i_2}^{'}\gamma_i^{'}$ and
-$\alpha_i^{''}\beta_{i_1}^{''}\delta_i\beta_{i_2}^{''}\gamma_i^{'}$ are
-indistinguishable to all operations in $\op\setminus\{op_{e_{i}}\}$. 
-
-This implies that (1)~the projection of the execution $\pi_i^{''}$ on $op_{e_i}$
-follows the full locking protocol satisfying Condition~\ref{cond:lp}, and
-(2)~all operations return the same value in $\pi_i^{''}$ as in $\pi^{'}$, which
-means Condition~\ref{cond:equiv} holds.
-
-It is left to show that $\pi_i^{''}$ satisfies Condition~\ref{cond:locks}. 
-This is straightforward from the induction hypothesis and the fact that only
-$op_{e_i}$ changed its locking pattern in the last iteration and that
-$\delta_i$ precedes $C_{e_j}$ for all $j\geq i+1$ in $\pi_i^{''}$ which we
-define to be $\pi_{i+1}^{'}$ for the next iteration.
- 
-\end{proof}
-
-By Lemma~\ref{lemma:pitagtag} and Claim~\ref{claim:pipitag} we conclude that
-\begin{theorem}
-Any execution of the optimistic instrumentation is equivalent to an
-execution of the locking protocol.
-\end{theorem}
