--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -108,10 +108,10 @@ hand-crafting concurrent data structures.
 % general terms are not compulsory anymore, 
 % you may leave them out
 \terms
-term1, term2
+Automatic code generation, parallel programming, synchronization
 
 \keywords
-keyword1, keyword2
+Concurrent data structures, lock elision
 
 \input{introduction}
 \input{preliminaries}
@@ -126,7 +126,9 @@ keyword1, keyword2
 
 %This is the text of the appendix, if you need one.
 
-%\acks
+\acks
+
+Removed for blind review.
 
 %Acknowledgments, if needed.
 
