--- a/Tex/src/evaluation.tex
+++ b/Tex/src/evaluation.tex
@@ -66,7 +66,7 @@ We also compared our algorithms to previous automatic approaches,
 mainly global locking (\globalTree, \globalTreap) 
 and domination locking (\domTree, \domTreap). 
 
-We ran our experiments on four Inter Xeon E-4650 processors, 
+We ran our experiments on four Intel Xeon E5-4650 processors, 
 each with 8 cores for a total of 32 threads 
 (with hyper-threading disabled). 
 We used Ubuntu 12.04.4 LTS and Java$^{TM}$ Runtime Environment (build
